--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1311,6 +1311,7 @@
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
   "plan.creation.successful": "Le plan a été créé avec succès",
   "plan.update.successful": "Le plan a été mis à jour avec succès",
+  "plan.deletion.successful": "Le plan a été supprimé avec succès",
   "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès",
   "api.created": "Créée",
   "api.published": "Publiée",
