--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1376,6 +1376,7 @@
     "anonymous.reporting.success.enabled" : "Anonymous reporting enabled.",
     "anonymous.reporting.success.disabled" : "Anonymous reporting disabled.",
     "anonymous.reporting.error": "Error while changing value.",
-    "anonymous.reporting.popup.info": "Enable Anonymous reporting for helping us ? This will help us a lot. More info at (url Doc).",
-    "anonymous.reporting.popup.no": "Anonymous Reporting not accepted."
+    "anonymous.reporting.popup.info": "Enable Anonymous reporting for helping us ? This will help us a lot. More info in ",
+    "anonymous.reporting.popup.no": "Anonymous Reporting not accepted.",
+    "anonymous.reporting.enable": "Enable anonymous reporting"
 }
