Clean translations files

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -64,18 +64,11 @@
         "s": "API subscription",
         "p": "APIs subscriptions"
     },
-    "member": {
-        "s": "Member",
-        "p": "Members"
-    },
     "unread notifications": {
         "s": "unread notification",
         "p": "unread notifications"
     },
     "Update team": "Update team",
-    "api keys": "API keys",
-    "Members": "Members",
-    "Assets": "Assets",
     "Type the password": "Type the password",
     "Re-type the password": "Re-type the password",
     "Change my password": "Change my password",
@@ -180,10 +173,6 @@
     "upload error": "Upload error",
     "upload.error.message": "You have to provide at least a title and a filename for a file.",
     "no file found": "no file found",
-    "asset": {
-        "s": "asset",
-        "p": "assets"
-    },
     "Asset": {
         "s": "Asset",
         "p": "Assets"
@@ -291,6 +280,7 @@
     "tenant_edit.cms_history_length.help": "The number of revisions kept in the database.",
     "tenant_edit.view_home_page": "View home page",
     "tenant_edit.home_page.visibility": "Home page visibility",
+    "tenant_edit.translation_mode_message": "You can now navigate and edit all elements just by hovering it",
     "Session max. age": "Session max. age",
     "Second": {
         "s": "Second",
@@ -492,7 +482,6 @@
     "Subscribed Apis": "Subscribed APIs",
     "delete.apikey.confirm": "Are you sure you want to delete this API key?",
     "Api Name": "API name",
-    "Api keys": "API keys",
     "API key": {
         "s": "API key",
         "p": "API keys"
@@ -626,7 +615,7 @@
         "s": "Member",
         "p": "Members"
     },
-    "Pending members": "Pending (%s)",
+    "pending members": "Pending (%s)",
     "team.created": "Team %s successfully created",
     "team.updated": "Team successfully updated",
     "Footer": "Footer",
@@ -740,7 +729,6 @@
     "mandatory.metadata.label": "Mandatory metadata (%s)",
     "Additional metadata": "Additional metadata",
     "create.metadata.option.label": "Create option %s",
-    "Team apis": "Team APIs",
     "notif.apikey.refresh": "Your subscription %s (%s/%s) has been refreshed.",
     "Apikey refresh": "API key refresh",
     "Load previous messages": "Load previous messages",
@@ -999,7 +987,6 @@
     "mailing_internalization.mail_template_tab": "Mail template",
     "mailing_internalization.front_office_tab": "Front office",
     "mailing_internalization.go_to_edit_template": "Edit mail template",
-    "tenant_edit.translation_mode_message": "You can now navigate and edit all elements just by hovering it",
     "Translation mode enabled": "Translation mode enabled",
     "profile.security.oldPassword": "Old password",
     "profile.security.newPassword": "New password",
@@ -1032,6 +1019,16 @@
     "constraints.min.0": "Minimum value is 0",
     "constraint.min.authorizedEntities": "Authorized entities must contains one service or one group min.",
     "constraint.test.required.variables": "value must contains required variables",
+    "constraints.required.type": "Type is required",
+    "constraints.oneof.plan.type": "Please select a correct plan type",
+    "constraints.positive": "The value must be positive",
+    "constraints.integer": "The value must be an integer",
+    "constraints.required.billing.period": "The billing period is required",
+    "constraints.oneof.period": "Please, select a correct period unit (Hours, Days, Months or Years)",
+    "constraints.oneof.sub.process": "Please, select a correct subscription process (Automatic or Manual)",
+    "constraints.oneof.integration.process": "Please, select a correct integration process (Automatic or ApiKey)",
+    "constraints.required.period.unit": "The unit of period is required",
+    "constraint.match.path": "value must be a valid path",
     "SEO": "SEO",
     "Robot.txt.label": "Robots.txt content",
     "Robot.txt.content": "the content of the robots.txt file serve by Daikoku",
@@ -1139,16 +1136,6 @@
     "Standard mode": "Standard mode",
     "Expert mode": "Expert mode",
     "Subscription.manual.help": "mandatory value due to custom metadata set up",
-    "constraints.required.type": "Type is required",
-    "constraints.oneof.plan.type": "Please select a correct plan type",
-    "constraints.positive": "The value must be positive",
-    "constraints.integer": "The value must be an integer",
-    "constraints.required.billing.period": "The billing period is required",
-    "constraints.oneof.period": "Please, select a correct period unit (Hours, Days, Months or Years)",
-    "constraints.oneof.sub.process": "Please, select a correct subscription process (Automatic or Manual)",
-    "constraints.oneof.integration.process": "Please, select a correct integration process (Automatic or ApiKey)",
-    "constraints.required.period.unit": "The unit of period is required",
-    "constraint.match.path": "value must be a valid path",
     "Edit plan": "Edit plan",
     "back.to.team": "Back to %s",
     "Otoroshi Settings": "Otoroshi Settings",
@@ -1263,7 +1250,8 @@
     "Don't save": "Don't save",
     "set.from.assets": "Set %s from asset",
     "set.logo": "logo",
-    "JS": "JS",
+    "set.css": "CSS file",
+    "set.js": "JS file",
     "set.favicon": "favicon",
     "set.font.family": "font family",
     "select.team.placeholder": "Select a team",
@@ -1286,8 +1274,14 @@
     "token.expired": "Token expired.",
     "fastMode.onlySubs.info": "with only subscribed ",
     "fastMode.planSearch.info": "and plans with a name like",
+    "api.delete.subscription": "Delete subscription",
     "api.delete.subscription.form.title": "Subscription deletion",
     "api.delete.subscription.message": "You are about to delete the subscription of team %s for plan %s. This action cannot be undone. Are you sure you want to delete this subscription?",
+    "api.delete.subscription.form": "Subscription deletion form",
+    "api.delete.subscription.howToDelete": "type : \"%s\" for deleting the subscription.",
+    "api.delete.subscription.deleted": "Subscription deleted.",
+    "api.delete.subscription.impossible.nothing": "Enter the name of the subscription for deleting it.",
+    "api.delete.subscription.impossible.incorrect": "The name is wrong.",
     "secret.refresh.confirm": "You are about to refresh the secret the subscription of team %s for plan %s. This action cannot be undone. Are you sure you want to refresh the secret ?",
     "authorized.groups": "Services groups",
     "authorized.services": "Services",
@@ -1298,12 +1292,6 @@
     "login.btn.label": "Login",
     "api_documentation_modal.import.title": "Choose a documentation page to import from another version of this API.",
     "issue.comments.number": " (%s) comments",
-    "api.delete.subscription": "Delete subscription",
-    "api.delete.subscription.form": "Subscription deletion form",
-    "api.delete.subscription.howToDelete": "type : \"%s\" for deleting the subscription.",
-    "api.delete.subscription.deleted": "Subscription deleted.",
-    "api.delete.subscription.impossible.nothing": "Enter the name of the subscription for deleting it.",
-    "api.delete.subscription.impossible.incorrect": "The name is wrong.",
     "secret.refresh.success": "Refresh secret success",
     "Payment": "Payment",
     "third-party.payment.list.add.label": "Add new settings",
@@ -1333,8 +1321,8 @@
     "demand.delete.modal.message": "Are you sure you want to delete this subscription demand?",
     "demand.delete.modal.title": "Deleting a subscription request",
     "subscription.process.add.email.step.title": "Email process step setup",
-    "widget.demands.ext.title": "My in progress demands",
     "widget.demands.title": " In progress demands",
+    "widget.demands.ext.title": "My in progress demands",
     "widget.demands.state": "State: %s",
     "accepted": "Accepted",
     "refused": "Refused",
@@ -1372,6 +1360,7 @@
     "pricing.clone.env.btn.label": "Duplicate environment",
     "pricing.edit.env.btn.label": "Edit environment",
     "pricing.delete.env.btn.label": "Delete environment",
+    "Alert": "Alert",
     "documentation.add.button.label": "Create documentation",
     "team_apikey_aggregatePlans_title": "Aggregated API keys",
     "constraints.plan.custom-name.one-of.environment": "The plan name must match one of the available environments",
@@ -1387,5 +1376,8 @@
     "anonymous.reporting.error": "Error while changing value.",
     "anonymous.reporting.popup.info": "Enable Anonymous reporting for helping us ? This will help us a lot. More info in ",
     "anonymous.reporting.popup.no": "Anonymous Reporting not accepted.",
-    "anonymous.reporting.enable": "Enable anonymous reporting"
+    "anonymous.reporting.enable": "Enable anonymous reporting",
+    "aggregation.button.subscription.cancel.label": "Subscribe with a new api key",
+    "aggregation.button.subscription.disable.label": "No api keys are present in your team",
+    "aggregation.button.subscription.active.label": "Subscribe using an existing api key"
 }
