Clean translations files

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -64,21 +64,11 @@
     "s": "souscription",
     "p": "souscriptions"
   },
-  "member": {
-    "s": "membre",
-    "p": "membres"
-  },
   "unread notifications": {
     "s": "notification non lue",
     "p": "notifications non lues"
   },
   "Update team": "Mettre à jour l'équipe",
-  "Team Apis": "APIs",
-  "Team Income": "Revenus",
-  "Team api keys": "Clé d'API",
-  "Team billing": "Facturation",
-  "Team members": "Membres",
-  "Team assets": "Assets",
   "Type the password": "Saisir votre mot de passe",
   "Re-type the password": "Confirmez votre mot de passe",
   "Change my password": "Modifier mon mot de passe",
@@ -183,10 +173,6 @@
   "upload error": "Erreur de téléchargement",
   "upload.error.message": "Vous devez fournir au moins un titre et un nom de fichier.",
   "no file found": "Aucun fichier trouvé",
-  "asset": {
-    "s": "asset",
-    "p": "assets"
-  },
   "Asset": {
     "s": "Asset",
     "p": "Assets"
@@ -231,7 +217,7 @@
   "Webhook Headers": "Webhook Headers",
   "Id": "Id",
   "Enabled": "Activé",
-  "Disabled": "Désactivé",  
+  "Disabled": "Désactivé",
   "Domain name": "Nom de domaine",
   "Default  language": "Langue par défaut",
   "Logo": "Logo",
@@ -283,6 +269,18 @@
   "Alerting": "Alerting",
   "Bucket": "Bucket",
   "tenant_edit.cms_pages": "Page d'accueil personnalisée",
+  "tenant_edit.link_to_cmspages": "Editer les pages",
+  "tenant_edit.home_page": "Page d'accueil",
+  "tenant_edit.404_page": "404 page",
+  "tenant_edit.authenticated_cmspage": "Page authentifié",
+  "tenant_edit.authenticated_cmspage_help": "Affiché quand un utilisateur non connecté accède à une page nécessitant d'être connecté",
+  "tenant_edit.cache_help": "Durée pendant laquelle les pages CMS en cache ne seront pas re-rendues. Peut améliorer les performances et le SEO.",
+  "tenant_edit.cache": "Durée de vie du cache (en ms)",
+  "tenant_edit.cms_history_length": "Longueur de l'historique",
+  "tenant_edit.cms_history_length.help": "Nombre de modifications gardées en base",
+  "tenant_edit.view_home_page": "Voir la page d'accueil",
+  "tenant_edit.home_page.visibility": "Visibilité de la page d'accueil",  
+  "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élément pour modifier leur texte",
   "Session max. age": "Age max. de session",
   "Second": {
     "s": "Seconde",
@@ -300,8 +298,8 @@
   "Admin password": "Mot de passe admin",
   "Name field name": "Champ nom",
   "Email field name": "Champ email",
-  "Email of Daikoku Admins": "Email des admins Daikoku",
   "Picture field name": "Champ image",
+  "Email of Daikoku Admins": "Email des admins Daikoku",
   "URL of the OIDC config": "URL de config. OIDC",
   "Get from OIDC config 2": "Récuperer depuis OIDC config 2",
   "Use JSON payloads": "Utiliser un payload JSON",
@@ -361,7 +359,7 @@
   "importing ...": "import ...",
   "import state": "Importer l'état",
   "download state": "Exporter l'état",
-  "State":"Etat",
+  "State": "Etat",
   "Published": "Publiée",
   "View this api consumption": "Voir la consommation de l'API",
   "Create a new API": "Créer une nouvelle API",
@@ -484,7 +482,6 @@
   "Subscribed Apis": "API souscrites",
   "delete.apikey.confirm": "Êtes-vous certain de vouloir supprimer cette clé d'API ?",
   "Api Name": "Nom API",
-  "Api keys": "Clés d'API",
   "API key": {
     "s": "Clé d'API",
     "p": "Clés d'API"
@@ -697,7 +694,7 @@
   "Last 7 days": "7 derniers jours",
   "Last 30 days": "30 derniers jours",
   "Billing period": "Période de facturation",
-  "Billing period unit":"Unité de période de facturation",
+  "Billing period unit": "Unité de période de facturation",
   "Usage": "Usage",
   "Global informations": "Informations globales",
   "Hit": {
@@ -732,7 +729,6 @@
   "mandatory.metadata.label": "Métadonnées obligatoires (%s)",
   "Additional metadata": "Métadonnées additionnelles",
   "create.metadata.option.label": "Créer l'option %s",
-  "Team apis": "APIs d'équipe",
   "notif.apikey.refresh": "votre souscription %s (%s/%s) a été mise à jour.",
   "Apikey refresh": "Mise à jour d'une clé d'API",
   "Load previous messages": "Messages précédents",
@@ -991,24 +987,12 @@
   "mailing_internalization.mail_template_tab": "Modèle de mail",
   "mailing_internalization.front_office_tab": "Autres pages",
   "mailing_internalization.go_to_edit_template": "Éditer le modèle de mails",
-  "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élément pour modifier leur texte",
-  "tenant_edit.link_to_cmspages": "Editer les pages",
-  "tenant_edit.home_page": "Page d'accueil",
-  "tenant_edit.404_page": "404 page",
-  "tenant_edit.authenticated_cmspage": "Page authentifié",
-  "tenant_edit.authenticated_cmspage_help": "Affiché quand un utilisateur non connecté accède à une page nécessitant d'être connecté",
-  "tenant_edit.cache_help": "Durée pendant laquelle les pages CMS en cache ne seront pas re-rendues. Peut améliorer les performances et le SEO.",
-  "tenant_edit.cache": "Durée de vie du cache (en ms)",
-  "tenant_edit.cms_history_length": "Longueur de l'historique",
-  "tenant_edit.cms_history_length.help": "Nombre de modifications gardées en base",
-  "tenant_edit.view_home_page": "Voir la page d'accueil",
-  "tenant_edit.home_page.visibility": "Visibilité de la page d'accueil",
   "Translation mode enabled": "Mode traduction activé",
-  "Search translation": "Rechercher une traduction",
   "profile.security.oldPassword": "Ancien mot de passe",
   "profile.security.newPassword": "Nouveau mot de passe",
   "profile.security.confirmPassword": "Confirmation du mot de passe",
   "profile.security.updatePassword": "Mettre à jour le mot de passe",
+  "Search translation": "Rechercher une traduction",
   "constraints.required.name": "Le nom est requis",
   "constraints.required.email": "L'adresse email est requise",
   "constraints.required.password": "Le mot de passe est requis",
@@ -1028,24 +1012,13 @@
   "constraints.matches.email": "Votre courriel doit être une adresse électronique valide",
   "constraints.matches.password": "Votre mot de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spécial (#$^+=!*()@%&).",
   "constraints.oneof.confirm.password": "La confirmation du mot de passe doit être identique au mot de passe",
+  "constraints.test.password": "mot de passe érroné",
   "constraints.reserved.char.version": "Certains caractères sont reservés pour la version (%s)",
   "constraints.file.type.forbidden": "Le type du fichier est interdit",
   "constraints.file.type.required": "Le content-type du fichier est requis",
   "constraints.min.0": "La valeur minimum est de 0",
   "constraint.min.authorizedEntities": "Les entitées autorisées doivent contenir au minimum une service ou un groupe",
   "constraint.test.required.variables": "la valeur doit contenir les variables requises",
-  "SEO": "SEO",
-  "Robot.txt.label": "Contenu du fichier robots.txt",
-  "Robot.txt.content": "Le contenu du fichier robots.txt servi par Daikoku",
-  "Mode": "Mode",
-  "ldap.namefields.help": "le nom d'utilisateur est construit en concaténant les champs LDAP fournis",
-  "Go home": "Retourner à l'accueil",
-  "notification.accept.on_error.title": "Impossible d'accepter la notification",
-  "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
-  "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée.",
-  "Standard mode": "Mode standard",
-  "Expert mode": "Mode expert",
-  "Subscription.manual.help": "valeur obligatoire en raison de la configuration des métadonnées personnalisées",
   "constraints.required.type": "Le type est requis",
   "constraints.oneof.plan.type": "Merci de sélectionner un type de plan correct",
   "constraints.positive": "La valeur doit être positive",
@@ -1056,15 +1029,15 @@
   "constraints.oneof.integration.process": "Merci de sélectionner une valeur correcte pour le processus d'intégration (Automatique ou Clé d'API)",
   "constraints.required.period.unit": "L'unité de periode est requise",
   "constraint.match.path": "La valeur doit être un chemin valide",
-  "Edit plan": "Modifier le plan",
-  "back.to.team": "Retour à %s",
-  "Otoroshi Settings": "Paramètres Otoroshi",
-  "Otoroshi Customization": "Personnalisation Otoroshi",
-  "Quotas & Billing": "Quotas & Facturation",
-  "Skip": "Passer",
-  "Otoroshi target": "Otoroshi cible",
-  "http.method": "Méthode HTTP",
-  "http.path": "Chemin",
+  "SEO": "SEO",
+  "Robot.txt.label": "Contenu du fichier robots.txt",
+  "Robot.txt.content": "Le contenu du fichier robots.txt servi par Daikoku",
+  "Mode": "Mode",
+  "ldap.namefields.help": "le nom d'utilisateur est construit en concaténant les champs LDAP fournis",
+  "Go home": "Retourner à l'accueil",
+  "notification.accept.on_error.title": "Impossible d'accepter la notification",
+  "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
+  "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée.",
   "daikokuapp.pages_title": "Edition des pages",
   "cms.create.back_to_pages": "Retour",
   "cms.create.save_modifications": "Mettre à jour",
@@ -1144,22 +1117,34 @@
   "cms.content_side_view.daikoku-documentations-page-id": "Récupère la page de documentation d'une api souhaitée (via Id)",
   "cms.content_side_view.daikoku-plans": "Récupère les plans d'une API",
   "cms.content_side_view.search_text": "Tapez le nom de la directive",
-  "cms.body.drag_and_drop_advice": "Dépose un fichier dans l'éditeur pour importer le contenu directement",
   "cms.index.new_page": "Nouvelle page",
-  "cms.pages.publish_date": "Date de publication",
-  "cms.pages.name": "Nom",
   "cms.pages.block": "BLOC",
   "cms.sidebar.is_block_page": "Est-ce un bloc ?",
+  "cms.pages.publish_date": "Date de publication",
+  "cms.pages.name": "Nom",
   "cms.pages.path": "Chemin",
   "cms.create.path": "Chemin d'exposition",
+  "cms.body.drag_and_drop_advice": "Dépose un fichier dans l'éditeur pour importer le contenu directement",
   "cms.content_side.new_action": "Ajouter un élément",
   "cms.export_all": "Exporter",
-  "cms.import_all": "Importer",
   "cms.revisions.restore": "Restaurer cette version",
   "cms.revisions.delete_sentence": "Êtes-vous sûr de vouloir restaurer cette version ?",
   "cms.revisions.version_history": "Historique",
+  "cms.import_all": "Importer",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
   "incorrect password": "Mots de passe incorrect",
+  "Standard mode": "Mode standard",
+  "Expert mode": "Mode expert",
+  "Subscription.manual.help": "valeur obligatoire en raison de la configuration des métadonnées personnalisées",
+  "Edit plan": "Modifier le plan",
+  "back.to.team": "Retour à %s",
+  "Otoroshi Settings": "Paramètres Otoroshi",
+  "Otoroshi Customization": "Personnalisation Otoroshi",
+  "Quotas & Billing": "Quotas & Facturation",
+  "Skip": "Passer",
+  "Otoroshi target": "Otoroshi cible",
+  "http.method": "Méthode HTTP",
+  "http.path": "Chemin",
   "api.configuration.btn.label": "Configurer l'API",
   "create": "Créer",
   "search.placeholder": "Rechercher une API, équipe, etc...",
@@ -1270,8 +1255,8 @@
   "set.favicon": "le favicon",
   "set.font.family": "la police de style",
   "select.team.placeholder": "Sélectionner une équipe",
-  "otoroshi.missing.target": "Cible Otoroshi manquante",
   "otoroshi.missing.entities": "Entités Otoroshi manquantes",
+  "otoroshi.missing.target": "Cible Otoroshi manquante",
   "apiList.tag.search": "Recherchez un tag",
   "apiList.category.search": "Recherchez une catégorie",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
@@ -1292,6 +1277,11 @@
   "api.delete.subscription": "Supprimer la souscription",
   "api.delete.subscription.form.title": "Suppression d'une souscription",
   "api.delete.subscription.message": "Vous êtes sur le point de supprimer la souscription de l'équipe %s pour le plan %s. cette action ne peut être annulée. Êtes-vous sûr de vouloir la supprimer ?",
+  "api.delete.subscription.form": "Formulaire de suppression de la souscription",
+  "api.delete.subscription.howToDelete": "Tapez : \"%s\" pour supprimer la souscription.",
+  "api.delete.subscription.deleted": "Souscription supprimée.",
+  "api.delete.subscription.impossible.nothing": "Entrez le nom de la souscription pour la supprimer.",
+  "api.delete.subscription.impossible.incorrect": "Le nom est faux.",
   "secret.refresh.confirm": "Vous êtes sur le point d'actualiser le secret de la souscription de l'équipe %s pour le plan %s. Cette action ne peut être annulée. Êtes vous sûr d'actualiser ce secret ?",
   "authorized.groups": "Services groupes",
   "authorized.services": "Services",
@@ -1301,11 +1291,6 @@
   "password.label": "Mot de passe",
   "api_documentation_modal.import.title": "Choisissez une page de documentation à importer d'une autre version de cette API.",
   "issue.comments.number": " (%s) commentaires",
-  "api.delete.subscription.form": "Formulaire de suppression de la souscription",
-  "api.delete.subscription.howToDelete": "Tapez : \"%s\" pour supprimer la souscription.",
-  "api.delete.subscription.deleted": "Souscription supprimée.",
-  "api.delete.subscription.impossible.nothing": "Entrez le nom de la souscription pour la supprimer.",
-  "api.delete.subscription.impossible.incorrect": "Le nom est faux.",
   "secret.refresh.success": "Succès du rafraichissement du secret",
   "login.btn.label": "Se connecter",
   "Payment": "Paiement",
@@ -1313,8 +1298,8 @@
   "third-party.payment.settings.delete.confirm.message": "Êtes-vous sûr de vouloir supprimer ces paramètres ?",
   "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à paramétrer",
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
-  "plan.creation.successful": "Le plan a été créé avec succès",
   "plan.update.successful": "Le plan a été mis à jour avec succès",
+  "plan.creation.successful": "Le plan a été créé avec succès",
   "plan.deletion.successful": "Le plan a été supprimé avec succès",
   "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès",
   "api.created": "Créée",
@@ -1349,8 +1334,8 @@
   "team.dashboard.label.producer": "Producteur",
   "team.dashboard.label.consumer": "Consommateur",
   "motivation.form.modal.title": "Parametrage du formulaire de motivation",
-  "motivation.form.sample.title": "Exemple",
   "motivation.form.setting.title": "Paramètres",
+  "motivation.form.sample.title": "Exemple",
   "motivation.form.preview.title": "Prévisualisation",
   "motivation.form.schema.label": "Schema",
   "motivation.form.schema.help": "Un schema JSON compatible @maif/react-forms afin de spécifier les différents champs du formalaire de motivation",
@@ -1385,5 +1370,8 @@
   "N/A": "N/A",
   "semver.error.message": "Une version ne peut pas être créée avec des caractères spéciaux : %s",
   "version.creation.success.message": "La nouvelle version de l'API a été créée avec succès",
-  "error.message.creation.security.enabled": "Vous n'êtes pas autorisé a créer d'API, merci de contacter votre administrateur."
+  "error.message.creation.security.enabled": "Vous n'êtes pas autorisé a créer d'API, merci de contacter votre administrateur.",
+  "aggregation.button.subscription.cancel.label": "Souscrire avec une nouvelle clé d'API",
+  "aggregation.button.subscription.disable.label": "Aucune clé d'API",
+  "aggregation.button.subscription.active.label": "Souscrire en étendant une clé d'API existante"
 }
