--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1377,7 +1377,7 @@
     "anonymous.reporting.popup.info": "Enable Anonymous reporting for helping us ? This will help us a lot. More info in ",
     "anonymous.reporting.popup.no": "Anonymous Reporting not accepted.",
     "anonymous.reporting.enable": "Enable anonymous reporting",
-    "aggregation.button.subscription.cancel.label": "Subscribe with a new api key",
+    "aggregation.button.subscription.usual.label": "Subscribe with a new api key",
     "aggregation.button.subscription.disable.label": "No api keys are present in your team",
-    "aggregation.button.subscription.active.label": "Subscribe using an existing api key"
+    "aggregation.button.subscription.enable.label": "Subscribe using an existing api key"
 }
