--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1377,7 +1377,7 @@
   "anonymous.reporting.popup.info": "Activer les rapports anonymes pour nous aider ? Cela nous aidera beaucoup. Pour plus d'informations, cliquez sur : ",
   "anonymous.reporting.popup.no": "Rapports anonymes non acceptés.",
   "anonymous.reporting.enable": "Activer les rapports anonymes",
-  "aggregation.button.subscription.cancel.label": "Souscrire avec une nouvelle clé d'API",
+  "aggregation.button.subscription.usual.label": "Souscrire avec une nouvelle clé d'API",
   "aggregation.button.subscription.disable.label": "Aucune clé d'API",
-  "aggregation.button.subscription.active.label": "Souscrire en étendant une clé d'API existante"
+  "aggregation.button.subscription.enable.label": "Souscrire en étendant une clé d'API existante"
 }
