--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1007,7 +1007,7 @@
   "constraints.required.file": "Le fichier est requis",
   "constraints.required.otoroshi.settings": "les paramètres Otoroshi sont requis",
   "constraints.required.authorizedEntities": "les entitées autorisées sont requise",
-  "constraints.required.value": "la valeure est requise",
+  "constraints.required.value": "la valeur est requise",
   "constraints.required.domain": "Le nom de domaine est requis",
   "constraints.required.tag_name": "Le nom du tag est requis",
   "constraints.format.url": "%s doit être une URL valide",
@@ -1293,12 +1293,12 @@
   "password.label": "Mot de passe",
   "api_documentation_modal.import.title": "Choisissez une page de documentation à importer d'une autre version de cette API.",
   "issue.comments.number": " (%s) commentaires",
-  "secret.refresh.success": "Succès du rafraichissement du secret",
+  "secret.refresh.success": "Succès du rafraîchissement du secret",
   "login.btn.label": "Se connecter",
   "Payment": "Paiement",
   "third-party.payment.list.add.label": "Ajouter un tiers de paiement",
   "third-party.payment.settings.delete.confirm.message": "Êtes-vous sûr de vouloir supprimer ces paramètres ?",
-  "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à paramétrer",
+  "third-party.payment.settings.type.select.message": "Merci de sélectionner un type de tiers de paiement à paramétrer",
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
   "plan.update.successful": "Le plan a été mis à jour avec succès",
   "plan.creation.successful": "Le plan a été créé avec succès",
@@ -1314,14 +1314,14 @@
   "subscription.process.email": "Courriel",
   "subscription.process.add.label": "Ajouter une nouvelle étape",
   "subscription.process.httpRequest": "Requete HTTP",
-  "subscription.process.add.httpRequest.step.title": "Création de l'etape par requete HTTP",
+  "subscription.process.add.httpRequest.step.title": "Création de l'etape par requête HTTP",
   "Process": "Process",
   "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
-  "api.pricings.add.first.step.btn.label": "Ajouter une premiere étape de validation",
+  "api.pricings.add.first.step.btn.label": "Ajouter une première étape de validation",
   "api.documentation.clone.page.modal.title": "Clonage des pages de documentation",
   "api.documentation.clone.page.placeholder": "Sélectionnez toutes les pages à cloner",
   "demand.delete.modal.message": "Voulez-vous vraiment supprimer cette demande de souscription ?",
-  "demand.delete.modal.title": "Suppression d'une demande de soucription",
+  "demand.delete.modal.title": "Suppression d'une demande de souscription",
   "subscription.process.add.email.step.title": "Configuration de l'étape du processus par e-mail",
   "widget.demands.title": "Mes demandes en cours",
   "widget.demands.ext.title": "Demandes en cours",
@@ -1335,15 +1335,15 @@
   "widget.demands.no.demands": "aucune demande en cours",
   "team.dashboard.label.producer": "Producteur",
   "team.dashboard.label.consumer": "Consommateur",
-  "motivation.form.modal.title": "Parametrage du formulaire de motivation",
+  "motivation.form.modal.title": "Paramétrage du formulaire de motivation",
   "motivation.form.setting.title": "Paramètres",
   "motivation.form.sample.title": "Exemple",
   "motivation.form.preview.title": "Prévisualisation",
   "motivation.form.schema.label": "Schema",
-  "motivation.form.schema.help": "Un schema JSON compatible @maif/react-forms afin de spécifier les différents champs du formalaire de motivation",
+  "motivation.form.schema.help": "Un schema JSON compatible @maif/react-forms afin de spécifier les différents champs du formulaire de motivation",
   "motivation.form.formatter.label": "Formatteur",
-  "motivation.form.formatter.help": "une chaîne de caractères dans laquelle des mots entre « [[ ]] » seront remplacés par les valeurs correspondantes récupérées à partir des réponses fournies par l'utilisateur dans le formulaire et envoyé à l'administarteur pour validation.",
-  "motivation.form.sample.help": "Utilisez le formulaire de test ci-dessous pour prévisualiser et valider vos paramètres de formatage (formatter).",
+  "motivation.form.formatter.help": "une chaîne de caractères dans laquelle des mots entre « [[ ]] » seront remplacés par les valeurs correspondantes récupérées à partir des réponses fournies par l'utilisateur dans le formulaire et envoyé à l'administrateur pour validation.",
+  "motivation.form.sample.help": "Utilisez le formulaire de test ci-dessous pour prévisualiser et valider vos paramètres de formatage (formater).",
   "motivation.form.sample.button.label": "Tester",
   "sub.meta.modal.admin.custom.name.label": "Nom personnalisé de la clé",
   "sub.meta.modal.admin.custom.name.help": "ce nom personnalisé ne sera visible que de l'équipe d'administration",
@@ -1358,13 +1358,13 @@
   "navbar.environments.label": "Environnements",
   "pricing.add.new.env.btn.label": "Ajouter un environnement",
   "pricing.import.env.btn.label": "Importer un environnement",
-  "pricing.default.env.btn.label": "Environnement par défault",
+  "pricing.default.env.btn.label": "Environnement par défaut",
   "pricing.clone.env.btn.label": "Dupliquer l'environnement",
   "pricing.edit.env.btn.label": "Modifier l'environnement",
   "pricing.delete.env.btn.label": "Supprimer l'environnement",
   "Alert": "Alerte",
   "documentation.add.button.label": "Initialiser la documentation",
-  "team_apikey_aggregatePlans_title": "Clés d'API agregées",
+  "team_apikey_aggregatePlans_title": "Clés d'API agrégées",
   "constraints.plan.custom-name.one-of.environment": "Le nom du plan doit correspondre à l'un des environnements disponibles",
   "aggregated.apikey.badge.title": "Clé d'API agrégée",
   "aggregated.apikey.badge.apikey.name": "Nom personnalisée de la clé",
@@ -1372,7 +1372,7 @@
   "N/A": "N/A",
   "semver.error.message": "Une version ne peut pas être créée avec des caractères spéciaux : %s",
   "version.creation.success.message": "La nouvelle version de l'API a été créée avec succès",
-  "error.message.creation.security.enabled": "Vous n'êtes pas autorisé a créer d'API, merci de contacter votre administrateur.",
+  "error.message.creation.security.enabled": "Vous n'êtes pas autorisé à créer d'API, merci de contacter votre administrateur.",
   "anonymous.reporting.success.enabled" : "Rapports anonymes activés.",
   "anonymous.reporting.success.disabled" : "Rapports anonymes désactivés.",
   "anonymous.reporting.error": "Erreur lors du changement de valeur.",
