--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1313,7 +1313,7 @@
   "subscription.process.team.admin": "Admin. équipe",
   "subscription.process.email": "Courriel",
   "subscription.process.add.label": "Ajouter une nouvelle étape",
-  "subscription.process.httpRequest": "Requete HTTP",
+  "subscription.process.httpRequest": "Requête HTTP",
   "subscription.process.add.httpRequest.step.title": "Création de l'etape par requête HTTP",
   "Process": "Process",
   "api.pricings.no.step.explanation": "Il semble qu'il n'y ait pas de processus de validation de la demande d'abonnement au processus",
